website/websites/debian/code/partialsums.2.gcj.log
BUILD COMMANDS FOR: partialsums.gcj-2.gcj

Mon Jan 15 22:16:04 PST 2007

/usr/bin/gcj-4.1 -O3 -fomit-frame-pointer -march=athlon-tbird  -o partialsums.gcj-2.gcj_run --main=partialsums partialsums.java
partialsums.java: In class 'partialsums':
partialsums.java: In method 'partialsums.main(java.lang.String[])':
partialsums.java:31: error: Can't find method ‘printf(Ljava/lang/String;D)’ in type ‘java.io.PrintStream’.
      System.out.printf("%.9f\t(2/3)^k\n", a1);
                   ^
partialsums.java:32: error: Can't find method ‘printf(Ljava/lang/String;D)’ in type ‘java.io.PrintStream’.
      System.out.printf("%.9f\tk^-0.5\n", a2);
                   ^
partialsums.java:33: error: Can't find method ‘printf(Ljava/lang/String;D)’ in type ‘java.io.PrintStream’.
      System.out.printf("%.9f\t1/k(k+1)\n", a3);
                   ^
partialsums.java:34: error: Can't find method ‘printf(Ljava/lang/String;D)’ in type ‘java.io.PrintStream’.
      System.out.printf("%.9f\tFlint Hills\n", a4);
                   ^
partialsums.java:35: error: Can't find method ‘printf(Ljava/lang/String;D)’ in type ‘java.io.PrintStream’.
      System.out.printf("%.9f\tCookson Hills\n", a5);
                   ^
partialsums.java:36: error: Can't find method ‘printf(Ljava/lang/String;D)’ in type ‘java.io.PrintStream’.
      System.out.printf("%.9f\tHarmonic\n", a6);
                   ^
partialsums.java:37: error: Can't find method ‘printf(Ljava/lang/String;D)’ in type ‘java.io.PrintStream’.
      System.out.printf("%.9f\tRiemann Zeta\n", a7);
                   ^
partialsums.java:38: error: Can't find method ‘printf(Ljava/lang/String;D)’ in type ‘java.io.PrintStream’.
      System.out.printf("%.9f\tAlternating Harmonic\n", a8);
                   ^
partialsums.java:39: error: Can't find method ‘printf(Ljava/lang/String;D)’ in type ‘java.io.PrintStream’.
      System.out.printf("%.9f\tGregory\n", a9);
                   ^
9 errors
make[1]: [partialsums.gcj-2.gcj_run] Error 1 (ignored)
rm partialsums.gcj-2.gcj

=================================================================
COMMAND LINE (%A is single numeric argument):

partialsums.gcj-2.gcj_run %A
Error, could not exec partialsums.gcj-2.gcj_run 25000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/partialsums:/opt/shootout/shootout/bench/partialsums/tmp:/home/brent/bin:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)
Error, could not exec  (Inappropriate ioctl for device)
PATH=/opt/shootout/shootout/bench/partialsums:/opt/shootout/shootout/bench/partialsums/tmp:/opt/IronPython/bin:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/home/brent/bin:/usr/share/smlnj/bin:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
